Auto stash before checking out "origin/main"
